test/sematic/resources/positive/basic_if_else3.tig
if 1 then () else let in end