test/sematic/resources/negative/false_fundec5.tig
let 
    function fun():string = ()
in
end